--- a/Pages/Rep_UserActivity.cshtml
+++ b/Pages/Rep_UserActivity.cshtml
@@ -122,6 +122,81 @@
             </div>
         </div>
     </div>
+    @if (Model.TotalPages > 1)
+    {
+        <nav aria-label="Page navigation">
+            <ul class="pagination">
+
+                @* Previous button *@
+                @if (Model.CurrentPage > 1)
+                {
+                   
+                    <li class="page-item">
+                        <a class="page-link" href="?page=@(Model.CurrentPage - 1)&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">&laquo;</a>
+                    </li>
+                }
+
+                @* Show pages normally if the total pages are less than or equal to 10 *@
+                @if (Model.TotalPages <= 10)
+                {
+                    @for (int i = 1; i <= Model.TotalPages; i++)
+                    {
+                        <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
+                            <a class="page-link" href="?page=@i&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">@i</a>
+                        </li>
+                    }
+                }
+                else
+                {
+                    @* Show the first page, then ellipsis if there are skipped pages *@
+                    @if (Model.CurrentPage > 3)
+                    {
+                        <li class="page-item">
+                            <a class="page-link" href="?page=1&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">1</a>
+                        </li>
+                        <li class="page-item disabled">
+                            <span class="page-link">...</span>
+                        </li>
+                    }
+
+                    @* Show pages from (current-1) to (current+1) *@
+                    @for (int i = Math.Max(1, Model.CurrentPage - 1); i <= Math.Min(Model.TotalPages, Model.CurrentPage + 1); i++)
+                    {
+                        <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
+                            <a class="page-link" href="?page=@i&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">@i</a>
+                        </li>
+                    }
+
+                    @* Add "..." if there are skipped pages after the current page *@
+                    @if (Model.CurrentPage < Model.TotalPages - 1)
+                    {
+                        <li class="page-item disabled">
+                            <span class="page-link">...</span>
+                        </li>
+                    }
+
+                    @* Show the last page, if it's not already visible *@
+                    @if (Model.CurrentPage < Model.TotalPages - 2)
+                    {   
+                        <li class="page-item">
+                            <a class="page-link" href="?page=@Model.TotalPages&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">@Model.TotalPages</a>
+                        </li>
+                    }
+                }
+
+                @* Last buttons *@
+                @if (Model.CurrentPage < Model.TotalPages)
+                {
+                    <li class="page-item">
+                        <a class="page-link" href="?page=@(Model.CurrentPage + 1)&UserName=@Model.UserName&FromDate=@Model.FromDate&ToDate=@Model.ToDate">&raquo;</a>
+                    </li>
+                   
+                }
+
+            </ul>
+        </nav>
+    }
+
 
 
 
