--- a/Pages/Disbursements.cshtml
+++ b/Pages/Disbursements.cshtml
@@ -95,7 +95,7 @@
                     </span>
 
                     <input asp-for="FromDate" class="form-control" type="date" name="FromDate"
-                           value="@Model.lblFromDate" />
+                           value="@Model.FromDate?.ToString("yyyy-MM-dd")" />
                 </div>
             </div>
             <div class="col col-md-3">
@@ -105,7 +105,7 @@
                     </span>
 
                     <input asp-for="ToDate" class="form-control" type="date" name="ToDate"
-                           value="@Model.lblToDate" />
+                           value="@Model.ToDate?.ToString("yyyy-MM-dd")" />
                 </div>
             </div>
 
