--- a/Pages/ManageItems.cshtml
+++ b/Pages/ManageItems.cshtml
@@ -127,7 +127,7 @@
                                                     </span>
 
                                                     <input asp-for="FromDate" class="form-control" type="date" name="FromDate"
-                                                           value="@Model.lblFromDate" />
+                                                           value="@Model.FromDate?.ToString("yyyy-MM-dd")" />
                                                 </div>
                                             </div>
                                             <div class="col col-md-6 col-lg-3 mb-3 pe-0">
@@ -137,11 +137,10 @@
                                                     </span>
 
                                                     <input asp-for="ToDate" class="form-control" type="date" name="ToDate"
-                                                           value="@Model.lblToDate" />
+                                                           value="@Model.ToDate?.ToString("yyyy-MM-dd")" />
                                                 </div>
                                             </div>
         </div>
-
         <div class="row">
 
                     <div class="col-4 col-md-2 ps-md-0  mx-3">
