--- a/Pages/Disbursements.cshtml
+++ b/Pages/Disbursements.cshtml
@@ -132,15 +132,15 @@
                     <thead class="thead-light">
                         <tr>
                             <th scope="col" class="border-0 rounded-start">@Model.lblRequesterName</th>
-                            <th scope="col" class="border-0">@Model.lblRequestReceivedDate</th>
+                            @* <th scope="col" class="border-0">@Model.lblRequestReceivedDate</th> *@
                             <th scope="col" class="border-0">@Model.lblDestination</th>
                             <th scope="col" class="border-0">@Model.lblStoreName</th>
                             <th scope="col" class="border-0">@Model.lblComments</th>
                             <th scope="col" class="border-0">@Model.lblDisbursementStatus</th>
-                            <th scope="col" class="border-0">@Model.lblInventoryBalanced</th>
+                            @* <th scope="col" class="border-0">@Model.lblInventoryBalanced</th>
                             <th scope="col" class="border-0">@Model.lblItemName</th>
                             <th scope="col" class="border-0">@Model.lblItemCode</th>
-                            <th scope="col" class="border-0">@Model.lblItemType</th>
+                            <th scope="col" class="border-0">@Model.lblItemType</th> *@
                             <th scope="col" class="border-0">@Model.lblQuantity</th>
                             <th scope="col" class="border-0 rounded-end"></th>
                         </tr>
@@ -152,15 +152,15 @@
                 {
                     <tr>
                         <th scope="row">@item.RequesterName</th>
-                        <td>@item.ReqReceivedAt</td>
+                        @* <td>@item.ReqReceivedAt</td> *@
                         <td>@item.RequestingPlace</td>
                         <td>@item.StoreName</td>
                         <td>@item.Comments</td>
                         <td>@item.Status</td>
-                        <td>@item.InventoryBalanced</td>
+                        @* <td>@item.InventoryBalanced</td>
                         <td>@item.ItemName</td>
                         <td>@item.ItemCode</td>
-                        <td>@item.ItemTypeCode</td>
+                        <td>@item.ItemTypeCode</td> *@
                         <td>@item.Quantity</td>
 
                         <td>
