--- a/Pages/ManageRooms.cshtml
+++ b/Pages/ManageRooms.cshtml
@@ -87,7 +87,8 @@
                                   clip-rule="evenodd"></path>
                         </svg>
                     </span>
-                    <input type="text" name="RoomName" class="form-control" placeholder="@Model.lblRoomName">
+                    <input type="text" value="@Model.RoomName" name="RoomName" class="form-control"
+                        placeholder="@Model.lblRoomName">
                 </div>
             </div>
             <div class="col-4 col-md-2 col-xl-1 ps-md-0 text-end">
