--- a/Pages/Rep_UserActivity.cshtml
+++ b/Pages/Rep_UserActivity.cshtml
@@ -9,7 +9,7 @@
             </li>
             <li class="breadcrumb-item d-flex align-items-center">
                 <img src="images/pen.png" alt="Home" width="16" height="16" class="me-2" />
-                <a href="/Rep_MaterialsReceived" class="text-decoration-none">@Model.lblReports</a>
+                <a href="/Rep_UserActivity" class="text-decoration-none">@Model.lblReports</a>
             </li>
             <li class="breadcrumb-item d-flex align-items-center">
                 <img src="images/management.png" alt="Home" width="16" height="16" class="me-2" />
