--- a/Pages/Supplies.cshtml
+++ b/Pages/Supplies.cshtml
@@ -161,11 +161,11 @@
                             <th scope="col" class="border-0">@Model.lblRoomName</th>
                             <th scope="col" class="border-0">@Model.lblShelfNumber</th>
                             <th scope="col" class="border-0">@Model.lblQuantityReceived</th>
-                            <th scope="col" class="border-0">@Model.lblPurchaseOrderNo</th>
+                            @* <th scope="col" class="border-0">@Model.lblPurchaseOrderNo</th>
                             <th scope="col" class="border-0">@Model.lblInvoiceNumber</th>
                             <th scope="col" class="border-0">@Model.lblReceivedAt</th>
                             <th scope="col" class="border-0">@Model.lblExpiryDate</th>
-                            <th scope="col" class="border-0">@Model.lblInventoryBalanced</th>
+                            <th scope="col" class="border-0">@Model.lblInventoryBalanced</th> *@
                             
                             
                             
@@ -188,11 +188,11 @@
                         <td>@item.RoomName</td>
                         <td>@item.ShelfNumber</td>
                         <td>@item.QuantityReceived</td>
-                        <td>@item.PurchaseOrderNo</td>
+                        @* <td>@item.PurchaseOrderNo</td>
                         <td>@item.InvoiceNumber</td>
                         <td>@item.ReceivedAt</td>
                         <td>@item.ExpiryDate</td>
-                        <td>@item.InventoryBalanced</td>
+                        <td>@item.InventoryBalanced</td> *@
                         
                         
                         
