--- a/Pages/viewMaterialDispensing.cshtml
+++ b/Pages/viewMaterialDispensing.cshtml
@@ -34,7 +34,7 @@
     <div class="col-8 mb-4 m-auto">
         <div class="card shadow-sm p-4 mb-4">
             <div class="container mt-4">
-                <h3 class="mb-4">Disbursement Details</h3>
+                <h3 class="mb-4">Dispensing Details</h3>
                 @if (Model.Disbursement != null && Model.Disbursement.Any())
                 {
                     <table class="table table-bordered">
